# Pose-REN

./: .gitignore  README.md
models/: deploy_hands17_baseline.prototxt  deploy_hands17_pose_ren_py.prototxt  deploy_icvl_baseline.prototxt  deploy_icvl_pose_ren.prototxt  deploy_msra_baseline.prototxt  deploy_msra_pose_ren.prototxt  deploy_nyu_baseline.prototxt  deploy_nyu_pose_ren.prototxt
results/: icvl_center.txt  msra_center.txt  nyu_center.txt
src/: config.py.example  show_result.py
src/demo/: README.md  realsense_realtime_demo_librealsense2.py
src/demo/pose-ren-demo-cpp/: .gitignore  CMakeLists.txt
src/demo/pose-ren-demo-cpp/models/: deploy_baseline_icvl.prototxt  deploy_pose_ren_icvl.prototxt  deploy_pose_ren_icvl_py.prototxt  hand_baseline_wide.prototxt
src/demo/pose-ren-demo-cpp/src/: CMakeLists.txt  hand_pose_estimator.cpp  hand_pose_estimator.h  run_hand_pose.cpp
src/libs/: caffe.patch.proto  caffe_util.py  generate_roi_layer.cpp  generate_roi_layer.hpp
src/libs/python_layers/: py_generate_roi_layer.py
src/testing/: net_deploy_baseline.py  net_deploy_icvl_baseline.py  net_deploy_icvl_pose_ren.py  net_deploy_msra_baseline.py  net_deploy_msra_pose_ren.py  net_deploy_nyu_baseline.py  net_deploy_nyu_pose_ren.py  net_deploy_pose_ren.py  predict.py  run_images.py
src/training/: net_handpose_baseline_icvl.py  net_icvl_baseline.py  net_icvl_pose_ren.py  net_msra_baseline.py  net_msra_pose_ren.py  net_nyu_baseline.py  net_nyu_pose_ren.py  pose_ren_util.py  test_icvl_pose_ren.py  test_msra_pose_ren.py  test_nyu_pose_ren.py  train_icvl_pose_ren.py  train_msra_pose_ren.py  train_msra_pose_ren_bak.py  train_nyu_pose_ren.py
src/utils/: model_pose_ren.py  pose_ren_util.py  util.py
